Formulários no React

--- a/curso.html
+++ b/curso.html
@@ -586,6 +586,27 @@
 
 <p> yarn add apexcharts react-apexcharts </p>
 
+<section >
+  <strong>
+    Formas de criar um formulários no React
+  </strong>
+</section>
+
+<ul>
+  <li> <b> Controlled Components </b> = Monitora a digitação dentro do input e salva isso dentro do Estado </li>
+  <li> <b> Uncontrolled Components Imperativa </b> = Quando é possível encontrar o valor de um componente somente quando se faz necessário, caso contrário, os valores não são armazenados em uma variável. </li>
+</ul>
+
+<ul> Conceitos correlatos
+ <li> Imperativa x Declarativa </li>
+</ul>
+
+<ul> Bibliotecas para formulários 
+  <li> Formik </li>
+  <li> React Hook Form </li>
+  <li> Unform | RocketSeat </li>
+ </ul>
+
 </body>
 
 </html>
