Validação de Dados

--- a/curso.html
+++ b/curso.html
@@ -609,6 +609,11 @@
 
 <p> yarn add react-hook-form </p> 
 
+<p>
+  <b> yup </b> = Dead Simple Object schema validation | Validação simples de esquema de objeto morto
+</p>
+
+<p> yarn add yup </p>
 </body>
 
 </html>
