--- a/curso.html
+++ b/curso.html
@@ -614,6 +614,16 @@
 </p>
 
 <p> yarn add yup </p>
+
+<strong> Data Fetching no React </strong>
+
+<p> React Query </p>
+
+<p> React Query </p>
+
+<strong> yarn add miragejs -D </strong>
+
+
 </body>
 
 </html>
