--- a/curso.html
+++ b/curso.html
@@ -626,7 +626,10 @@
  <strong>yarn add faker -D</strong>
 
  <strong> yarn add react-query </strong>
+ <strong> Stale While Revalidate: Obsoleto enquanto revalida </strong>
+ <strong> Revalidate on Focus: Revalidação perante ao foco do usuário na página </strong>
 
+ <strong> Configurando o DevTools </strong>
 
 </body>
 
