--- a/curso.html
+++ b/curso.html
@@ -631,6 +631,10 @@
 
  <strong> Configurando o DevTools </strong>
 
+ <strong> Configurando o Axios </strong>
+
+ <p> yarn add axios </p>
+
 </body>
 
 </html>
