--- a/focalPoints.html
+++ b/focalPoints.html
@@ -641,7 +641,13 @@
 
  <p> API REST  </p>
 
- <p>Autenticação JWT </p>
+ <p> Autenticação e Autorização </p>
+
+ <p> Qual é o melhor método de autenticação </p>
+
+ <p> Clonagem do repositório do Github </p>
+
+ <p> git clone git@github.com:rocketseat-education/ignite-reactjs-auth-backend.git </p>
 
 </body>
 
