--- a/focalPoints.html
+++ b/focalPoints.html
@@ -648,7 +648,7 @@
  <p> Clonagem do repositório do Github </p>
 
  <p> git clone git@github.com:rocketseat-education/ignite-reactjs-auth-backend.git </p>
-
+  <p> Verificar o motivo desse clone não ter dado certo </p>
 </body>
 
 </html>
