--- a/focalPoints.html
+++ b/focalPoints.html
@@ -649,6 +649,12 @@
 
  <p> git clone git@github.com:rocketseat-education/ignite-reactjs-auth-backend.git </p>
   <p> Verificar o motivo desse clone não ter dado certo </p>
+
+
+  <p> É necessário ter uma chave SSH pública para poder clonar o repositório, logo, clonamos o repositório por HTTPS</p>
+
+  <strong>https://github.com/rocketseat-education/ignite-reactjs-auth-backend.git</strong>
+
 </body>
 
 </html>
