--- a/focalPoints.html
+++ b/focalPoints.html
@@ -655,6 +655,14 @@
 
   <strong>https://github.com/rocketseat-education/ignite-reactjs-auth-backend.git</strong>
 
+  <p> <b> yarn </b> - Instalação das dependências </p>
+
+  <p> http://localhost:3333/me </p>
+
+  <section> Criando uma aplicação exclusiva para autenticação </section>
+
+  <b> yarn create next-app nextauth </b>
+
 </body>
 
 </html>
