--- a/focalPoints.html
+++ b/focalPoints.html
@@ -669,6 +669,12 @@
 
   <p> Algoritmo HS256 </p>
 
+  <p> jwt.io </p>
+
+  <p> Header </p>
+  <p> Payload </p>
+  <p> Verificação da assinatura </p>
+
 </body>
 
 </html>
