--- a/focalPoints.html
+++ b/focalPoints.html
@@ -675,6 +675,18 @@
   <p> Payload </p>
   <p> Verificação da assinatura </p>
 
+  <section>
+    <ul>
+      localStorage
+    </ul>
+    <li>
+      sessionStorage
+    </li>
+    <li>
+      Cookies
+    </li>
+  </section>
+
 </body>
 
 </html>
