--- a/focalPoints.html
+++ b/focalPoints.html
@@ -677,13 +677,13 @@
 
   <section>
     <ul>
-      localStorage
+      localStorage: Só existe no lado do cliente, Nextauth utiliza Server Side Rendering
     </ul>
     <li>
-      sessionStorage
+      sessionStorage: não fica disponível em outras sessões
     </li>
     <li>
-      Cookies
+      Cookies: método antigo e porém, funcional 
     </li>
   </section>
 
